apps/sample-api/overlays/prod/patch-rollout-bluegreen.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sample-api
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: sample-api
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
  strategy:
    blueGreen:
      activeService: sample-api-stable
      previewService: sample-api-canary
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 30
      prePromotionAnalysis:
        templates:
          - templateName: sample-api-analysis
      postPromotionAnalysis:
        templates:
          - templateName: sample-api-analysis
