apps/sample-api/overlays/prod/patch-rollout-canary.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sample-api
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: sample-api
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
  strategy:
    canary:
      steps:
        - setWeight: 5
        - pause:
            duration: 3m
        - analysis:
            templates:
              - templateName: sample-api-analysis
        - setWeight: 20
        - pause: {}
        - analysis:
            templates:
              - templateName: sample-api-analysis
        - setWeight: 50
        - pause:
            duration: 5m
        - analysis:
            templates:
              - templateName: sample-api-analysis
        - setWeight: 100
